kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: enterjs-app-service
spec:
  selector:
    app: enterjs-app-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
